# red-specter-specter-raven-ce

./: .gitignore  README.md  pyproject.toml
raven/: __init__.py  cli.py  gate.py
raven/core/: __init__.py  dark.py  export.py  intel.py  orchestrator.py  parser.py  tui.py  whisper.py
raven/models/: __init__.py  core.py
raven/report/: __init__.py  builder.py
raven/subsystems/: __init__.py  assess.py  enumerate.py  escalate.py  harvest.py  persist.py  recon.py  report.py  select.py  spread.py  strike.py
raven/unleashed/: __init__.py  gate.py
raven_command/: __init__.py  cli.py
tests/: conftest.py  test_raven.py  test_specter_raven.py
