[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "red-specter-raven"
version = "1.0.0"
description = "SPECTER RAVEN — Autonomous Traditional Red Team Platform (T171)"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [{name = "Red Specter Security Research Ltd", email = "richard@red-specter.co.uk"}]
keywords = ["ai-security", "red-team", "autonomous-attack", "deepsomething", "threat-intelligence"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.0.0", "transformers>=4.30.0"]
ai = ["openai>=1.0.0", "anthropic>=0.7.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
raven = "raven.cli:main"

[tool.setuptools.packages.find]
include = ["raven*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --color=yes"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]
